--- a/public/src/common/chatWidget/chatWidget.tpl.html
+++ b/public/src/common/chatWidget/chatWidget.tpl.html
@@ -1,5 +1,6 @@
-<div>
-    <div class="chat-window" style="right: 10px;">
+<div class="right-sidebar-panel">
+
+    <div class="chat-window main-window">
         <div class="chat-window-title">
             <div class="text">
                 Chat
@@ -20,7 +21,7 @@
         </div>
     </div>
 
-    <div class="chat-window" style="right: 295px;"
+    <div class="chat-window chat-conversation-window" style="right: 295px;"
          chat-conversation
          chat-session="chatSession"
          super-socket="superSocket"
