--- a/public/src/login.html
+++ b/public/src/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-US" ng-app="loginApp">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <title></title>
@@ -12,7 +12,7 @@
 
     <!--<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>-->
 </head>
-<body>
+<body style="display: none;">
 
 <div ui-view></div>
 </body>
