task management ui, backend, change css login, etc

--- a/public/src/login/resetPassword/resetPassword.tpl.html
+++ b/public/src/login/resetPassword/resetPassword.tpl.html
@@ -1,7 +1,7 @@
 <div class="login-block-wrapper reset-password-wrapper container-fluid">
     <span ng-show="!updatedPassword">
         <div class="title-wrapper row">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
                 <div class="title-header">Change Your Password!</div>
                 <div class="register-instruction">
                     <p>Please enter new password to the textbox below.</p>
@@ -10,8 +10,8 @@
         </div>
 
         <div class="main-section row">
-            <div class="login-option-wrapper col-md-10 col-md-offset-1">
-                <div class="email-login-wrapper col-md-7">
+            <div class="login-option-wrapper col-md-12">
+                <div class="email-login-wrapper col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
                     <form name="passwordUpdateForm" ng-submit="updatePassword()">
                         <div class="control required">
                             <div class="title-label">
@@ -40,7 +40,7 @@
     <!--Already post to update the password-->
     <span ng-show="!!updatedPassword">
         <div class="main-section account-activation-wrapper row">
-            <div class="message-wrapper col-md-10 col-md-offset-1">
+            <div class="message-wrapper col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
                 <span ng-show="!updateStatus.error">
                     <div class="icon-wrapper success"></div>
 
