--- a/public/src/login/activateAccount/activateAccount.tpl.html
+++ b/public/src/login/activateAccount/activateAccount.tpl.html
@@ -1,6 +1,6 @@
 <div class="login-block-wrapper account-activation-wrapper container-fluid">
     <div class="main-section row">
-        <div class="message-wrapper col-md-6 col-md-offset-3">
+        <div class="message-wrapper col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
             <div ng-show="!activationKey">
                 <div class="icon-wrapper success"></div>
 
