--- a/public/src/login/login/login.tpl.html
+++ b/public/src/login/login/login.tpl.html
@@ -1,6 +1,6 @@
 <div class="login-block-wrapper container-fluid">
     <div class="title-wrapper row">
-       <div class="col-md-10 col-md-offset-1">
+       <div class="col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
            <div class="title-header">Sign In</div>
            <div class="register-instruction">
                <p>Use Facebook, Twitter or your email to sign in.</p>
@@ -10,8 +10,8 @@
     </div>
 
     <div class="main-section row">
-        <div class="login-option-wrapper col-md-10 col-md-offset-1">
-            <div class="social-login-wrapper col-md-6">
+        <div class="login-option-wrapper col-md-12">
+            <div class="social-login-wrapper col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
                 <div class="facebook-login" ng-click="loginFacebook()">
                     <i class="facebook-icon"></i>
                     <span class="text">Login with facebook</span>
@@ -28,39 +28,42 @@
                     <i class="twitter-icon"></i>
                     <span class="text">Login with twitter</span>
                 </div>
-            </div>
 
-            <div class="email-login-wrapper col-md-6">
-                <form name="loginForm" ng-submit="login()">
+                <div class="or"><span>OR</span></div>
 
-                    <div class="control">
-                        <div class="title-label">
-                            EMAIL OR USERNAME
-                        </div>
-                        <div>
-                            <input type="email" name="email" ng-model="userInput.email" required>
-                        </div>
-                    </div>
+                <!--second block-->
+                <div class="email-login-wrapper">
+                    <form name="loginForm" ng-submit="login()">
 
-                    <div class="control">
-                        <div class="title-label">
-                            PASSWORD
+                        <div class="control">
+                            <div class="title-label">
+                                EMAIL OR USERNAME
+                            </div>
+                            <div>
+                                <input type="email" name="email" ng-model="userInput.email" required>
+                            </div>
                         </div>
-                        <div>
-                            <input type="password" name="password" ng-model="userInput.password" required>
-                        </div>
-                    </div>
 
-                    <div class="control row" p2l-disable-selection>
-                        <div class="forgot-password-label col-md-6">
-                            <a href="#!/forgotPassword">Forgot password?</a>
+                        <div class="control">
+                            <div class="title-label">
+                                PASSWORD
+                            </div>
+                            <div>
+                                <input type="password" name="password" ng-model="userInput.password" required>
+                            </div>
                         </div>
-                        <div class="submit-btn-wrapper col-md-6">
-                            <button type="submit" class="btn submit btn-primary">Sign In</button>
-                        </div>
-                    </div>
-                </form>
 
+                        <div class="control row" p2l-disable-selection>
+                            <div class="forgot-password-label col-md-6">
+                                <a href="#!/forgotPassword">Forgot password?</a>
+                            </div>
+                            <div class="submit-btn-wrapper col-md-6">
+                                <button type="submit" class="btn submit btn-primary">Sign In</button>
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
             </div>
         </div>
     </div>
