--- a/public/src/login/register/register.tpl.html
+++ b/public/src/login/register/register.tpl.html
@@ -1,6 +1,6 @@
 <div class="login-block-wrapper register-block-wrapper container-fluid">
     <div class="title-wrapper row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
             <div class="title-header">Register</div>
             <div class="register-instruction">
                 <p>Getting in is easy. Use one of your social networks or start fresh with an email address.</p>
@@ -10,8 +10,8 @@
     </div>
 
     <div class="main-section row">
-        <div class="login-option-wrapper col-md-10 col-md-offset-1">
-            <div class="social-login-wrapper col-md-6">
+        <div class="login-option-wrapper col-md-12">
+            <div class="social-login-wrapper col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
                 <div class="facebook-login" ng-click="registerWithFacebook()">
                     <i class="facebook-icon"></i>
                     <span class="text">Register with facebook</span>
@@ -28,76 +28,78 @@
                     <i class="twitter-icon"></i>
                     <span class="text">Register with twitter</span>
                 </div>
-            </div>
 
-            <div class="email-login-wrapper col-md-6">
-                <span class="email-register-text">Register with Email</span>
-                <form name="registerForm" ng-submit="register()">
+                <div class="or"><span>OR</span></div>
 
-                    <div class="control required">
-                        <div class="title-label">
-                            FULLNAME
+                <div class="email-login-wrapper">
+                    <span class="email-register-text">Register with Email</span>
+                    <form name="registerForm" ng-submit="register()">
+
+                        <div class="control required">
+                            <div class="title-label">
+                                FULLNAME
+                            </div>
+                            <div>
+                                <input type="text" name="username" ng-model="userInput.name" required>
+                            </div>
                         </div>
-                        <div>
-                            <input type="text" name="username" ng-model="userInput.name" required>
-                        </div>
-                    </div>
 
-                    <div class="control required">
-                        <div class="title-label">
-                            EMAIL
+                        <div class="control required">
+                            <div class="title-label">
+                                EMAIL
                             <span ng-show="registerForm.email.$error.email" class="error">
                                 (Invalid Email)
                             </span>
+                            </div>
+                            <div>
+                                <input type="email" name="email" ng-model="userInput.email" required>
+                            </div>
                         </div>
-                        <div>
-                            <input type="email" name="email" ng-model="userInput.email" required>
-                        </div>
-                    </div>
 
-                    <div class="control required">
-                        <div class="title-label">
-                            PASSWORD
+                        <div class="control required">
+                            <div class="title-label">
+                                PASSWORD
                             <span ng-show="registerForm.password.$error.minlength" class="error">
                                 (Password must have at least 6 characters)
                             </span>
+                            </div>
+                            <div>
+                                <input type="password" name="password"  ng-minlength="6" ng-model="userInput.password" required>
+                            </div>
                         </div>
-                        <div>
-                            <input type="password" name="password"  ng-minlength="6" ng-model="userInput.password" required>
-                        </div>
-                    </div>
 
-                    <div class="control required">
-                        <div class="title-label">
-                            RETYPE PASSWORD
+                        <div class="control required">
+                            <div class="title-label">
+                                RETYPE PASSWORD
                             <span ng-show="registerForm.retypedPassword.$error.passwordMatch" class="error">
                                 (Password doesn't match)
                             </span>
+                            </div>
+                            <div>
+                                <input type="password" name="retypedPassword"
+                                       ng-change="registerForm.retypedPassword.$setValidity('passwordMatch',registerForm.password.$viewValue==registerForm.retypedPassword.$viewValue)"
+                                       ng-model="userInput.retypedPassword" required>
+                            </div>
                         </div>
-                        <div>
-                            <input type="password" name="retypedPassword"
-                                   ng-change="registerForm.retypedPassword.$setValidity('passwordMatch',registerForm.password.$viewValue==registerForm.retypedPassword.$viewValue)"
-                                   ng-model="userInput.retypedPassword" required>
-                        </div>
-                    </div>
 
-                    <div class="term-and-condition">
+                        <div class="term-and-condition">
                         <span>
                             <input type="checkbox" ng-model="userInput.acceptTerms"/>
                         </span>
                         <span>
                             I acknowledge that I have read and accept the Terms of Use Agreement
                         </span>
-                    </div>
-
-                    <div class="control" p2l-disable-selection>
-                        <div class="submit-btn-wrapper">
-                            <button type="submit" class="btn submit btn-primary"
-                                    ng-disabled="!userInput.acceptTerms || !registerForm.$valid">Register</button>
                         </div>
-                    </div>
-                </form>
 
+                        <div class="control" p2l-disable-selection>
+                            <div class="submit-btn-wrapper">
+                                <button type="submit" class="btn submit btn-primary"
+                                        ng-disabled="!userInput.acceptTerms || !registerForm.$valid">Register</button>
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
             </div>
         </div>
     </div>
